; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ioctl.c_pfioctl_ioc_tm.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ioctl.c_pfioctl_ioc_tm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }
%struct.pfioc_tm = type { i64, i32 }
%struct.proc = type { i32 }

@PFTM_MAX = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@pf_default_rule = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@PFTM_INTERVAL = common dso_local global i64 0, align 8
@pf_purge_thread_fn = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.pfioc_tm*, %struct.proc*)* @pfioctl_ioc_tm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pfioctl_ioc_tm(i32 %0, %struct.pfioc_tm* %1, %struct.proc* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pfioc_tm*, align 8
  %6 = alloca %struct.proc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.pfioc_tm* %1, %struct.pfioc_tm** %5, align 8
  store %struct.proc* %2, %struct.proc** %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %97 [
    i32 128, label %10
    i32 129, label %75
  ]

10:                                               ; preds = %3
  %11 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %12 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ult i64 %13, 0
  br i1 %14, label %26, label %15

15:                                               ; preds = %10
  %16 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %17 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @PFTM_MAX, align 8
  %20 = icmp uge i64 %18, %19
  br i1 %20, label %26, label %21

21:                                               ; preds = %15
  %22 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %23 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %21, %15, %10
  %27 = load i32, i32* @EINVAL, align 4
  store i32 %27, i32* %7, align 4
  br label %100

28:                                               ; preds = %21
  %29 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pf_default_rule, i32 0, i32 0), align 8
  %30 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %31 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds i32, i32* %29, i64 %32
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %8, align 4
  %35 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %36 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @PFTM_INTERVAL, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %48

40:                                               ; preds = %28
  %41 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %42 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %48

45:                                               ; preds = %40
  %46 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %47 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %46, i32 0, i32 1
  store i32 1, i32* %47, align 8
  br label %48

48:                                               ; preds = %45, %40, %28
  %49 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %50 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 8
  %52 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pf_default_rule, i32 0, i32 0), align 8
  %53 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %54 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = getelementptr inbounds i32, i32* %52, i64 %55
  store i32 %51, i32* %56, align 4
  %57 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %58 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = load i64, i64* @PFTM_INTERVAL, align 8
  %61 = icmp eq i64 %59, %60
  br i1 %61, label %62, label %71

62:                                               ; preds = %48
  %63 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %64 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 8
  %66 = load i32, i32* %8, align 4
  %67 = icmp slt i32 %65, %66
  br i1 %67, label %68, label %71

68:                                               ; preds = %62
  %69 = load i32, i32* @pf_purge_thread_fn, align 4
  %70 = call i32 @wakeup(i32 %69)
  br label %71

71:                                               ; preds = %68, %62, %48
  %72 = load i32, i32* %8, align 4
  %73 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %74 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %73, i32 0, i32 1
  store i32 %72, i32* %74, align 8
  br label %99

75:                                               ; preds = %3
  %76 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %77 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %76, i32 0, i32 0
  %78 = load i64, i64* %77, align 8
  %79 = icmp ult i64 %78, 0
  br i1 %79, label %86, label %80

80:                                               ; preds = %75
  %81 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %82 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %81, i32 0, i32 0
  %83 = load i64, i64* %82, align 8
  %84 = load i64, i64* @PFTM_MAX, align 8
  %85 = icmp uge i64 %83, %84
  br i1 %85, label %86, label %88

86:                                               ; preds = %80, %75
  %87 = load i32, i32* @EINVAL, align 4
  store i32 %87, i32* %7, align 4
  br label %100

88:                                               ; preds = %80
  %89 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pf_default_rule, i32 0, i32 0), align 8
  %90 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %91 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %90, i32 0, i32 0
  %92 = load i64, i64* %91, align 8
  %93 = getelementptr inbounds i32, i32* %89, i64 %92
  %94 = load i32, i32* %93, align 4
  %95 = load %struct.pfioc_tm*, %struct.pfioc_tm** %5, align 8
  %96 = getelementptr inbounds %struct.pfioc_tm, %struct.pfioc_tm* %95, i32 0, i32 1
  store i32 %94, i32* %96, align 8
  br label %99

97:                                               ; preds = %3
  %98 = call i32 @VERIFY(i32 0)
  br label %99

99:                                               ; preds = %97, %88, %71
  br label %100

100:                                              ; preds = %99, %86, %26
  %101 = load i32, i32* %7, align 4
  ret i32 %101
}

declare dso_local i32 @wakeup(i32) #1

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
